@@ -48,14 +48,13 @@ include_once('include/page_header.php');
 //		show_message(S_NO_ITEM_DEFINED);
 	}
 
-	$available_hosts = get_accessible_hosts_by_user($USER_DETAILS,PERM_READ_ONLY,PERM_RES_IDS_ARRAY, get_current_nodeid(true));
+	$options = array(
+		'itemids' => $_REQUEST['itemid'],
+		'nodeids' => get_current_nodeid(true)
+	);
 
-	if(!$db_data = DBfetch(DBselect('SELECT i.itemid from items i '.
-					' WHERE '.DBcondition('i.hostid',$available_hosts).
-						' AND i.itemid='.$_REQUEST['itemid'])))
-	{
-		access_deny();
-	}
+	$db_data = CItem::get($options);
+	if(empty($db_data)) access_deny();
 
 	$graph = new CChart();
 
