@@ -251,36 +251,24 @@ include_once('include/page_header.php');
 			}
 
 // Host triggers
-			$available_triggers = get_accessible_triggers(PERM_READ_ONLY, array($clone_templateid), PERM_RES_IDS_ARRAY);
-
-			$sql = 'SELECT DISTINCT t.triggerid, t.description '.
-					' FROM triggers t, items i, functions f'.
-					' WHERE i.hostid='.$clone_templateid.
-						' AND f.itemid=i.itemid '.
-						' AND t.triggerid=f.triggerid '.
-						' AND '.DBcondition('t.triggerid', $available_triggers).
-						' AND t.templateid=0 '.
-					' ORDER BY t.description';
-
-			$res = DBselect($sql);
-			while($db_trig = DBfetch($res)){
+			$options = array(
+				'hostids' => $clone_templateid,
+				'inherited' => 0,
+				'output' => API_OUTPUT_REFER
+			);
+			$db_triggers = CTrigger::get($options);
+			foreach($db_triggers as $tnum => $db_trig){
 				$result &= (bool) copy_trigger_to_host($db_trig['triggerid'], $templateid, true);
 			}
 
 // Host graphs
-			$available_graphs = get_accessible_graphs(PERM_READ_ONLY, array($clone_templateid), PERM_RES_IDS_ARRAY);
-
-			$sql = 'SELECT DISTINCT g.graphid, g.name '.
-						' FROM graphs g, graphs_items gi,items i '.
-						' WHERE '.DBcondition('g.graphid',$available_graphs).
-							' AND gi.graphid=g.graphid '.
-							' AND g.templateid=0 '.
-							' AND i.itemid=gi.itemid '.
-							' AND i.hostid='.$clone_templateid.
-						' ORDER BY g.name';
-
-			$res = DBselect($sql);
-			while($db_graph = DBfetch($res)){
+			$options = array(
+				'hostids' => $clone_templateid,
+				'inherited' => 0,
+				'output' => API_OUTPUT_REFER
+			);
+			$db_graphs = CGraph::get($options);
+			foreach($db_graphs as $gnum => $db_graph){
 				$result &= (bool) copy_graph_to_host($db_graph['graphid'], $templateid, true);
 			}
 		}
